ADDED SELECTION BUTTONS CHANGED LOGIC TO USE SELECTION BUTTONS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <script src="./java.js" defer></script>
 </head>
 <body>
-    
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+
+    <div class="selectionDisplay"></div>
+    <div class="roundResultDisplay"></div>
+    <div class="roundScoreDisplay"></div>
+    <div class="overallResultDisplay"></div>
 </body>
 </html>
 
