ADDED STYLING ADDED LOGIC FOR RESETTING

--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
     <script src="./java.js" defer></script>
 </head>
 <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
-
-    <div class="selectionDisplay"></div>
-    <div class="roundResultDisplay"></div>
-    <div class="roundScoreDisplay"></div>
-    <div class="overallResultDisplay"></div>
+    <div class="header">r-p-s</div>
+    <div class="boxContainer">
+        <div class="resultContainer">
+            <div class="selectionDisplay">
+                <h1>Player</h1>
+                <h1>Computer</h1>
+            </div>
+            <div class="roundScoreDisplay">
+                <p class="humanCount">0</p>
+                <p class="compCount">0</p>
+            </div>
+            <div class="roundResultDisplay"></div>
+        </div>
+        <div class="buttons"></div>
+    </div>
+    <div class="footer">Copyright JCritch91©
+        <a href="https://github.com/JCritch91" class="gitButton"></a>
+    </div>
 </body>
 </html>
 
